[tool.poetry]
name = "finances"
version = "0.1.0"
description = ""
authors = ["Hylan Silva <hylansilva@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.7"
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
